--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,27 +31,49 @@ jobs:
           ldflags: -s -w 
           buildmode: default
           working_dir: ${{ github.workspace }}/lib-net
-      - name: Build lib file
+      - name: Build c-archive-lib file
         uses: crazy-max/ghaction-xgo@v2
         with:
           xgo_version: latest
           go_version: 1.18
           dest: build/lib
-          prefix: rfu-net-lib
+          prefix: rfu-net-archive-lib
           targets: windows-10.0/amd64, windows-10.0/386,linux/amd64,linux/386,linux/arm64,darwin-10.16/arm64,darwin-10.16/amd64
           v: true
           x: false
           race: false
           ldflags: -s -w 
           buildmode: c-archive
-          working_dir: ${{ github.workspace }}/lib-net          
-      - name: Upload artifact
+          working_dir: ${{ github.workspace }}/lib-net      
+      - name: Build c-shared-lib file
+        uses: crazy-max/ghaction-xgo@v2
+        with:
+          xgo_version: latest
+          go_version: 1.18
+          dest: build/lib
+          prefix: rfu-net-shared-lib
+          targets: windows-10.0/amd64, windows-10.0/386,linux/amd64,linux/386,linux/arm64,darwin-10.16/arm64,darwin-10.16/amd64
+          v: true
+          x: false
+          race: false
+          ldflags: -s -w 
+          buildmode:  c-shared
+          working_dir: ${{ github.workspace }}/lib-net                
+      - name: Upload PE artifact
         uses: actions/upload-artifact@v3
         with:
           name: release
-          path: ${{ github.workspace }}/lib-net/build/**/*
+          path: |
+            ${{ github.workspace }}/lib-net/build/**/*
+            !${{ github.workspace }}/lib-net/build/lib/**/* 
+      - name: Upload lib artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: release
+          path: ${{ github.workspace }}/lib-net/build/lib/**/*                 
       - name: Archive file
         run:  tar cvf $GITHUB_WORKSPACE/c-archive.tar -C $GITHUB_WORKSPACE/lib-net/build/lib .
+        if: startsWith(github.ref, 'refs/tags/') 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/') 
