--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -3,7 +3,7 @@ name: Build and Upload
 on:
   push:
     branches:
-      - develop
+      - main
 
 jobs:
   build:
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: voidbytes/RemoteFingerUnlockModule
+          ref: master
 
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v1.1
@@ -36,7 +37,7 @@ jobs:
         working-directory: ${{env.GITHUB_WORKSPACE}}
         run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=arm64ec ${{env.SOLUTION_FILE_PATH}}
         continue-on-error: true
-
+        if: startsWith(github.ref, 'refs/tags/') 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
