--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -26,18 +26,18 @@ jobs:
 
       - name: Build x86
         working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=x86 ${{env.SOLUTION_FILE_PATH}}
-        continue-on-error: true
+        run: msbuild /m /p:Configuration=Release/p:Platform=x86 RemoteFingerUnlock.sln
+        continue-on-error: false
 
       - name: Build x64
         working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=x64 ${{env.SOLUTION_FILE_PATH}}
-        continue-on-error: true
+        run: msbuild /m /p:Configuration=Release /p:Platform=x64 RemoteFingerUnlock.sln
+        continue-on-error: false
 
       - name: Build ARM64EC
         working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=arm64ec ${{env.SOLUTION_FILE_PATH}}
-        continue-on-error: true
+        run: msbuild /m /p:Configuration=Release /p:Platform=arm64ec RemoteFingerUnlock.sln
+        continue-on-error: false
         if: startsWith(github.ref, 'refs/tags/') 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
