--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build x86
         working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: msbuild /m /p:Configuration=Release/p:Platform=x86 RemoteFingerUnlock.sln
+        run: msbuild /m /p:Configuration=Release/p:Platform=Win32 RemoteFingerUnlock.sln
         continue-on-error: false
 
       - name: Build x64
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build ARM64EC
         working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: msbuild /m /p:Configuration=Release /p:Platform=arm64ec RemoteFingerUnlock.sln
+        run: msbuild /m /p:Configuration=Release /p:Platform=ARM64EC RemoteFingerUnlock.sln
         continue-on-error: false
         if: startsWith(github.ref, 'refs/tags/') 
       - name: Upload Artifacts
