--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -13,15 +13,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          repository: voidbytes/PassowrdProvider
+          repository: voidbytes/PasswordProvider
           token: ${{ secrets.GH_PAT }} # `GH_PAT` is a secret that contains your PAT
           ref: main
 
-      - name: Set up MSYS2
-        uses: actions/setup-msys2@v2
+      - name: Install Chocolatey
+        run: |
+          Set-ExecutionPolicy Bypass -Scope Process -Force; `
+          iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 
-      - name: Install dependencies
-        run: pacman -Syu --noconfirm mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake mingw-w64-x86_64-ninja
+      - name: Install CMake and Ninja
+        run: choco install -y cmake ninja
 
       - name: Create build directory
         run: |
