--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,20 +17,7 @@ jobs:
      # - uses: actions/setup-go@v2
       #  with:
        #   go-version: "1.18"
-      - name: Build executable file
-        uses: crazy-max/ghaction-xgo@v2
-        with:
-          xgo_version: latest
-          go_version: 1.18
-          dest: build
-          prefix: rfu-net-lib
-          targets: windows-10.0/amd64, windows-10.0/386 #,linux/amd64,linux/386,linux/arm64,darwin-10.16/arm64,darwin-10.16/amd64
-          v: true
-          x: false
-          race: false
-          ldflags: -s -w 
-          buildmode: default
-          working_dir: ${{ github.workspace }}/lib-net
+
     
       - name: Build c-shared-lib file
         uses: crazy-max/ghaction-xgo@v2
@@ -39,20 +26,13 @@ jobs:
           go_version: 1.18
           dest: build/lib
           prefix: rfu-net-shared-lib
-          targets: windows-10.0/amd64, windows-10.0/386 #,linux/amd64,linux/386,linux/arm64,darwin-10.16/arm64,darwin-10.16/amd64
+          targets: windows-10.0/amd64, windows-10.0/386 , windows-10.0/arm64 #,linux/amd64,linux/386,linux/arm64,darwin-10.16/arm64,darwin-10.16/amd64
           v: true
           x: false
           race: false
           ldflags: -s -w 
           buildmode:  c-shared
           working_dir: ${{ github.workspace }}/lib-net                
-      - name: Upload PE artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: PE-artifact
-          path: |
-            ${{ github.workspace }}/lib-net/build/**/*
-            !${{ github.workspace }}/lib-net/build/lib/**/* 
       - name: Upload lib artifact
         uses: actions/upload-artifact@v3
         with:
@@ -67,7 +47,5 @@ jobs:
         with:
           files: |
             ${{ github.workspace }}/c-archive.tar
-            ${{ github.workspace }}/lib-net/build/rfu-net-lib-windows-10.0-amd64.exe 
-            ${{ github.workspace }}/lib-net/build/rfu-net-lib-windows-10.0-386.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
