--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: windows-2022
+    strategy:
+      matrix:
+      platform: [Win32, x64, ARM64EC] # Add ARM64EC to the build matrix
 
     steps:
       - name: Checkout repository
@@ -38,7 +41,8 @@ jobs:
         working-directory: ${{env.GITHUB_WORKSPACE}}
         run: msbuild /m /p:Configuration=Release /p:Platform=ARM64EC RemoteFingerUnlock.sln
         continue-on-error: false
-        if: startsWith(github.ref, 'refs/tags/') 
+
+        
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
