--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,7 +24,8 @@ jobs:
 
       - name: Install CMake and Ninja
         run: choco install -y cmake ninja
-
+      - name: ls
+        run: ls-al
       - name: Create build directory
         run: |
           mkdir -p ${{ github.workspace }}/build
