--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,3 +36,9 @@ jobs:
 
       - name: Build
         run: cmake --build .
+
+      - name: Upload Artifact
+          uses: actions/upload-artifact@v2
+          with:
+            name: PasswordProvider
+            path: ${{ github.workspace }}/build/libPasswordProvider.dll
