--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -38,7 +38,10 @@ jobs:
         run: cmake --build .
 
       - name: Upload Artifact
-          uses: actions/upload-artifact@v2
-          with:
+         uses: actions/upload-artifact@v2
+         with:
             name: PasswordProvider
-            path: ${{ github.workspace }}/build/libPasswordProvider.dll
+            path: |
+                 ${{ github.workspace }}/build/PasswordProvider_arm64.dll
+                 ${{ github.workspace }}/build/PasswordProvider_x86.dll
+                 ${{ github.workspace }}/build/PasswordProvider_x64.dll
