--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,12 @@
 on:
   push:
-
+    
 name: go Build
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout lib-net
         uses: actions/checkout@v3
@@ -14,36 +15,26 @@ jobs:
           token: ${{ secrets.GH_PAT }} # `GH_PAT` is a secret that contains your PAT
           path: lib-net
           ref: master
-     # - uses: actions/setup-go@v2
-      #  with:
-       #   go-version: "1.18"
 
-    
+      - name: Pull xgo image
+        run: docker pull karalabe/xgo-latest # Pull the latest xgo image from Docker Hub
+
       - name: Build c-shared-lib file
-        uses: crazy-max/ghaction-xgo@v2
-        with:
-          xgo_version: latest
-          go_version: latest
-          dest: build/lib
-          prefix: rfu-net-shared-lib
-          targets: windows-10.0/amd64, windows-10.0/386 , windows-10.0/arm64 #,linux/amd64,linux/386,linux/arm64,darwin-10.16/arm64,darwin-10.16/amd64
-          v: true
-          x: false
-          race: false
-          ldflags: -s -w 
-          buildmode:  c-shared
-          working_dir: ${{ github.workspace }}/lib-net                
+        run: docker run --rm -v ${{ github.workspace }}:/source karalabe/xgo-latest --targets=windows-10.0/amd64,windows-10.0/386,windows-10.0/arm64 --ldflags="-s -w" --buildmode=c-shared /source/lib-net # Use docker run to invoke xgo and specify the target platforms and build options
+
       - name: Upload lib artifact
         uses: actions/upload-artifact@v3
         with:
           name: Lib-artifact
-          path: ${{ github.workspace }}/lib-net/build/lib/**/*                 
+          path: ${{ github.workspace }}/lib-net/build/lib/**/*
+
       - name: Archive file
-        run:  tar cvf $GITHUB_WORKSPACE/c-archive.tar -C $GITHUB_WORKSPACE/lib-net/build/lib .
-        if: startsWith(github.ref, 'refs/tags/') 
+        run: tar cvf $GITHUB_WORKSPACE/c-archive.tar -C $GITHUB_WORKSPACE/lib-net/build/lib .
+        if: startsWith(github.ref, 'refs/tags/')
+
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/') 
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             ${{ github.workspace }}/c-archive.tar
