--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         run: docker pull karalabe/xgo-latest # Pull the latest xgo image from Docker Hub
 
       - name: Build c-shared-lib file
-        run: docker run --rm -v ${{ github.workspace }}:/source karalabe/xgo-latest --targets windows-10.0/amd64,windows-10.0/386,windows-10.0/arm64 --ldflags="-s -w" --buildmode=c-shared /source/lib-net # Use docker run to invoke xgo and specify the target platforms and build options
+        run: docker run --rm -v ${{ github.workspace }}:/source karalabe/xgo-latest --targets windows-10.0/amd64,windows-10.0/386,windows-10.0/arm64 --ldflags "-s -w" --buildmode=c-shared /source/lib-net # Use docker run to invoke xgo and specify the target platforms and build options
 
       - name: Upload lib artifact
         uses: actions/upload-artifact@v3
