--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,13 @@ jobs:
         with:
           repository: voidbytes/rfu-net-lib
           token: ${{ secrets.GH_PAT }} # `GH_PAT` is a secret that contains your PAT
-          path: lib-net
           ref: dev
       - name: Build c-shared-lib file
         run: |
           $env:CGO_ENABLED = 1
           $env:GOOS = 'windows'
           $env:GOARCH = ${{ matrix.platform }}
-          go build -buildmode=c-shared -x -v -ldflags "-s -w" -o ${{ github.workspace }}/lib-net/build/lib/lib-net-${{ matrix.platform }}.dll /source/lib-net # Use go build to compile the shared library for each platform
+          go build -buildmode=c-shared -x -v -ldflags "-s -w" -o  libNetwork-${{ matrix.platform }}.dll 
       - name: Upload lib artifact
         uses: actions/upload-artifact@v3
         with:
