--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: windows-2022
     strategy:
       matrix:
-        platform: [386, amd64, arm64]
+        platform: ["386", "amd64", "arm64"]
     steps:
       - name: Checkout lib-net
         uses: actions/checkout@v3
