--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -48,10 +48,10 @@ jobs:
         continue-on-error: false
 
       - name: lsall
-        run:  ls /build/
+        run:  ls /build/${{ matrix.platform }}/
 
       - name: lsall
-        run:  ls /build/Release
+        run:  ls /build/${{ matrix.platform }}/Release/ 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2 # Use v2 instead of v3
         with:
