--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           name: Build-Artifacts-${{ matrix.platform }} # Specify the artifact name for each platform
           path: |
-            /build/${{ matrix.platform }}/Release/ RemoteFingerUnlockModule.dll
+            /build/${{ matrix.platform }}/Release/RemoteFingerUnlockModule.dll
         
       # - name: Upload Artifacts
       #   uses: actions/upload-artifact@v3
