--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,38 +1,56 @@
-# on: 
-#   push
-# name: go Build
-# jobs:
-#   build:
-#     runs-on: windows-2022
-#     strategy:
-#       matrix:
-#         platform: ["386", "amd64"]
-#     steps:
-#       - name: Checkout lib-net
-#         uses: actions/checkout@v3
-#         with:
-#           repository: voidbytes/rfu-net-lib
-#           token: ${{ secrets.GH_PAT }} # `GH_PAT` is a secret that contains your PAT
-#           ref: dev
-#       - name: Build c-shared-lib file
-#         run: |
-#           $env:CGO_ENABLED = 1
-#           $env:GOOS = 'windows'
-#           $env:GOARCH = '${{ matrix.platform }}'
-#           go build -buildmode=c-shared -x -v -ldflags "-s -w" -o  libNetwork-${{ matrix.platform }}.dll 
-#       - name: Upload lib artifact
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: Lib-artifact
-#           path: ${{ github.workspace }}/lib-net/build/lib/**/*
-#       - name: Archive file
-#         run: tar cvf $GITHUB_WORKSPACE/c-archive.tar -C $GITHUB_WORKSPACE/lib-net/build/lib .
-#         if: startsWith(github.ref, 'refs/tags/')
-#       - name: Release
-#         uses: softprops/action-gh-release@v1
-#         if: startsWith(github.ref, 'refs/tags/')
-#         with:
-#           files: |
-#             ${{ github.workspace }}/c-archive.tar
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
+on:
+  push:
+
+name: go Build x86 x64
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout lib-net
+        uses: actions/checkout@v3
+        with:
+          repository: voidbytes/rfu-net-lib
+          token: ${{ secrets.GH_PAT }} # `GH_PAT` is a secret that contains your PAT
+          ref: master
+     # - uses: actions/setup-go@v2
+      #  with:
+       #   go-version: "1.18"
+
+    
+      - name: Build c-shared-lib file
+        uses: crazy-max/ghaction-xgo@v2
+        with:
+          xgo_version: latest
+          go_version: latest
+          dest: build/
+          prefix: libNetwork
+          targets: windows-10.0/amd64, windows-10.0/386  #,linux/amd64,linux/386,linux/arm64,darwin-10.16/arm64,darwin-10.16/amd64
+          v: true
+          x: false
+          race: false
+          ldflags: -s -w 
+          buildmode:  c-shared
+          working_dir: ${{ github.workspace }}/           
+      - name: Upload lib artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: Lib-artifact 386
+          path: ${{ github.workspace }}/build/libNetwork-windows-386.dll             
+      - name: Upload lib artifact x64
+        uses: actions/upload-artifact@v3
+        with:
+          name: Lib-artifact 386
+          path: ${{ github.workspace }}/build/libNetwork-amd64.dll         
+      # - name: Archive file
+      #   run:  tar cvf $GITHUB_WORKSPACE/c-archive.tar -C $GITHUB_WORKSPACE/lib-net/build/lib .
+      #   if: startsWith(github.ref, 'refs/tags/') 
+      # - name: Release
+      #   uses: softprops/action-gh-release@v1
+      #   if: startsWith(github.ref, 'refs/tags/') 
+      #   with:
+      #     files: |
+      #       ${{ github.workspace }}/c-archive.tar
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GH_PAT }}
