--- a/.github/workflows/gobuild.yml
+++ b/.github/workflows/gobuild.yml
@@ -19,28 +19,28 @@ jobs:
       - name: Install C compiler
         run: sudo apt-get install gcc-mingw-w64
 
-      - name: Set up environment variables
-        run: |
-          echo "CGO_ENABLED=1" >> $GITHUB_ENV
-          echo "GOOS=${{ matrix.os }}" >> $GITHUB_ENV
-          echo "GOARCH=${{ matrix.platform }}" >> $GITHUB_ENV
+    #   - name: Set up environment variables
+    #     run: |
+    #       echo "CGO_ENABLED=1" >> $GITHUB_ENV
+    #       echo "GOOS=${{ matrix.os }}" >> $GITHUB_ENV
+    #       echo "GOARCH=${{ matrix.platform }}" >> $GITHUB_ENV
 
-      - name: Build c-shared-lib file
-        run:  go build -buildmode=c-shared -x -v -ldflags "-s -w" -o libNetwork-${{ matrix.os }}-${{ matrix.platform }}.dll 
+    #   - name: Build c-shared-lib file
+    #     run:  go build -buildmode=c-shared -x -v -ldflags "-s -w" -o libNetwork-${{ matrix.os }}-${{ matrix.platform }}.dll 
 
-      - name: Upload lib artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: Lib-artifact
-          path: ${{ github.workspace }}/lib-net/build/lib/**/*
-      - name: Archive file
-        run: tar cvf $GITHUB_WORKSPACE/c-archive.tar -C $GITHUB_WORKSPACE/lib-net/build/lib .
-        if: startsWith(github.ref, 'refs/tags/')
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            ${{ github.workspace }}/c-archive.tar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+    #   - name: Upload lib artifact
+    #     uses: actions/upload-artifact@v3
+    #     with:
+    #       name: Lib-artifact
+    #       path: ${{ github.workspace }}/lib-net/build/lib/**/*
+    #   - name: Archive file
+    #     run: tar cvf $GITHUB_WORKSPACE/c-archive.tar -C $GITHUB_WORKSPACE/lib-net/build/lib .
+    #     if: startsWith(github.ref, 'refs/tags/')
+    #   - name: Release
+    #     uses: softprops/action-gh-release@v1
+    #     if: startsWith(github.ref, 'refs/tags/')
+    #     with:
+    #       files: |
+    #         ${{ github.workspace }}/c-archive.tar
+    #     env:
+    #       GITHUB_TOKEN: ${{ secrets.GH_PAT }}
