--- a/.github/workflows/gobuildArm64.yml
+++ b/.github/workflows/gobuildArm64.yml
@@ -27,6 +27,11 @@ jobs:
           repository: voidbytes/rfu-net-lib
           token: ${{ secrets.GH_PAT }} # `GH_PAT` is a secret that contains your PAT
           ref: dev
+      - name: Setup go
+        uses: actions/setup-go@v4
+        with:
+            go-version:  "1.20.4"
+
       - name: Build c-shared-lib file
         run: |
           export CC="aarch64-w64-mingw32-gcc"
