--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -35,7 +35,14 @@ jobs:
           with:
               go-version:  "1.22.3"
         - name: Build test
-          run: cd $GITHUB_WORKSPACE/rfu-net-lib/ && CGO_ENABLED=1  CC=x86_64-w64-mingw32-clang CXX=x86_64-w64-mingw32-clang++  GOOS=windows GOARCH=amd64 go build -buildmode=c-shared -x -v -ldflags "-s -w" -o ./out/x64/NetExtension.dll
+          run: |
+           export CC="aarch64-w64-mingw32-clang"
+           export CXX="aarch64-w64-mingw32-clang++"
+           export GOOS="windows"
+           export GOARCH="${{ matrix.platform }}"
+           export CGO_ENABLED="1"
+           cd $GITHUB_WORKSPACE/rfu-net-lib/ 
+           go build -buildmode=c-shared -x -v -ldflags "-s -w" -o ./out/x64/NetExtension.dll
         - name: Build dll file
           run: cd $GITHUB_WORKSPACE/rfu-net-lib/ && sh  build-linux.sh
         - name: Archive file
