--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -22,7 +22,7 @@ jobs:
           run: |
             tar -xf llvm-mingw-20240502-ucrt-ubuntu-20.04-x86_64.tar.xz
             cd llvm-mingw-20240502-ucrt-ubuntu-20.04-x86_64/bin
-            export PATH=$PATH:$(pwd)
+           
         - name: Checkout lib-net
           uses: actions/checkout@v4
           with:
@@ -36,6 +36,8 @@ jobs:
               go-version:  "1.22.3"
         - name: Build dll file
           run: |
+            export LLVM_PATH= $GITHUB_WORKSPACE/llvm-mingw-20240502-ucrt-ubuntu-20.04-x86_64/bin
+            export PATH=$LLVM_PATH:$PATH
             cd $GITHUB_WORKSPACE/rfu-net-lib/
             bash  build-linux.sh
         - name: Archive file
