--- a/.github/workflows/build-release-file-share.yml
+++ b/.github/workflows/build-release-file-share.yml
@@ -1,4 +1,4 @@
-name: file share build dev 
+name: file share build release 
 on:
     repository_dispatch:
         types: [build-release-fileshare]
