--- a/.github/workflows/build-release-file-share.yml
+++ b/.github/workflows/build-release-file-share.yml
@@ -35,7 +35,7 @@ jobs:
             export LLVM_PATH=$GITHUB_WORKSPACE/llvm-mingw-20240502-ucrt-ubuntu-20.04-x86_64/bin
             export PATH=$LLVM_PATH:$PATH
             cd $GITHUB_WORKSPACE/rfu-net-lib/
-            bash  build-linux.sh debug
+            bash  build-linux.sh 
         - name: Upload dll artifact
           uses: actions/upload-artifact@v3
           with:
