--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -22,10 +22,10 @@ jobs:
         - name: Checkout lib-net
           uses: actions/checkout@v4
           with:
-            repository: voidbytes/rfu-net-lib
+            repository: voidbytes/FadaControl
             token: ${{ secrets.GH_PAT }}  
             ref: master
-            path: rfu-net-lib
+            path: FadaControl
         - name: Setup go
           uses: actions/setup-go@v5
           with:
@@ -34,10 +34,10 @@ jobs:
           run: |
             export LLVM_PATH=$GITHUB_WORKSPACE/llvm-mingw-20240502-ucrt-ubuntu-20.04-x86_64/bin
             export PATH=$LLVM_PATH:$PATH
-            cd $GITHUB_WORKSPACE/rfu-net-lib/
+            cd $GITHUB_WORKSPACE/FadaControl/
             bash  build-linux.sh
         - name: Upload dll artifact
           uses: actions/upload-artifact@v3
           with:
-            name: NetExtension-release
-            path: ${{ github.workspace }}/rfu-net-lib/out/**/*
+            name: FadaControl-release
+            path: ${{ github.workspace }}/FadaControl/out/**/*
