--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -19,18 +19,18 @@ jobs:
           run: |
             tar -xf llvm-mingw-20240502-ucrt-ubuntu-20.04-x86_64.tar.xz
            
-        - name: Checkout lib-net
+        - name: Checkout FadaControl
           uses: actions/checkout@v4
           with:
             repository: voidbytes/FadaControl
             token: ${{ secrets.GH_PAT }}  
-            ref: master
+            ref: main
             path: FadaControl
         - name: Setup go
           uses: actions/setup-go@v5
           with:
               go-version:  "1.22.3"
-        - name: Build dll file
+        - name: Build FadaControl
           run: |
             export LLVM_PATH=$GITHUB_WORKSPACE/llvm-mingw-20240502-ucrt-ubuntu-20.04-x86_64/bin
             export PATH=$LLVM_PATH:$PATH
