--- a/.github/workflows/build-release-arm64.yml
+++ b/.github/workflows/build-release-arm64.yml
@@ -29,7 +29,8 @@ jobs:
         - name: Setup go
           uses: actions/setup-go@v5
           with:
-              go-version:  "1.22.3"
+              go-version:  "1.22.6"
+              check-latest: true
         - name: Build FadaControl
           run: |
             export LLVM_PATH=$GITHUB_WORKSPACE/llvm-mingw-20240619-ucrt-ubuntu-20.04-aarch64/bin
